--- a/gwt/modules/pom.xml
+++ b/gwt/modules/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.atmosphere.extensions</groupId>
         <artifactId>atmosphere-gwt-project</artifactId>
-        <version>2.0.0-SNAPSHOT</version>
+        <version>2.0.0-SNAPSHOT-SNAPSHOT</version>
     </parent>
 
     <groupId>org.atmosphere</groupId>
