--- a/gwt/pom.xml
+++ b/gwt/pom.xml
@@ -4,14 +4,14 @@
     <parent>
         <groupId>org.atmosphere</groupId>
         <artifactId>atmosphere-extensions-project</artifactId>
-        <version>2.0.0-SNAPSHOT</version>
+        <version>2.0.0-SNAPSHOT-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <groupId>org.atmosphere.extensions</groupId>
     <artifactId>atmosphere-gwt-project</artifactId>
     <name>atmosphere-gwt-project</name>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0-SNAPSHOT-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <url>https://github.com/Atmosphere/atmosphere-extensions/gwt</url>
@@ -51,41 +51,41 @@
             <dependency>
                 <groupId>org.atmosphere</groupId>
                 <artifactId>atmosphere-gwt-common</artifactId>
-                <version>2.0.0-SNAPSHOT</version>
+                <version>2.0.0-SNAPSHOT-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.atmosphere</groupId>
                 <artifactId>atmosphere-gwt-client</artifactId>
-                <version>2.0.0-SNAPSHOT</version>
+                <version>2.0.0-SNAPSHOT-SNAPSHOT</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.atmosphere</groupId>
                 <artifactId>atmosphere-gwt-extra</artifactId>
-                <version>2.0.0-SNAPSHOT</version>
+                <version>2.0.0-SNAPSHOT-SNAPSHOT</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.atmosphere</groupId>
                 <artifactId>atmosphere-gwt-server</artifactId>
-                <version>2.0.0-SNAPSHOT</version>
+                <version>2.0.0-SNAPSHOT-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.atmosphere</groupId>
                 <artifactId>atmosphere-gwt-poll</artifactId>
-                <version>2.0.0-SNAPSHOT</version>
+                <version>2.0.0-SNAPSHOT-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.atmosphere</groupId>
                 <artifactId>atmosphere-gwt-js</artifactId>
-                <version>2.0.0-SNAPSHOT</version>
+                <version>2.0.0-SNAPSHOT-SNAPSHOT</version>
                 <type>war</type>
                 <scope>runtime</scope>
             </dependency>
             <dependency>
                 <groupId>org.atmosphere</groupId>
                 <artifactId>atmosphere-gwt-jackson</artifactId>
-                <version>2.0.0-SNAPSHOT</version>
+                <version>2.0.0-SNAPSHOT-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.google.gwt</groupId>
