--- a/pom.xml
+++ b/pom.xml
@@ -469,7 +469,7 @@
     <properties>
         <jetty-version>6.1.22</jetty-version>
         <jersey-version>1.17</jersey-version>
-        <atmosphere-version>2.0.0</atmosphere-version>
+        <atmosphere-version>2.1.0-SNAPSHOT</atmosphere-version>
         <compat-version>2.1.0</compat-version>
         <javascript-version>2.0.3</javascript-version>
         <jaxb-version>2.1</jaxb-version>
