--- a/hazelcast/modules/pom.xml
+++ b/hazelcast/modules/pom.xml
@@ -9,9 +9,14 @@
     <groupId>org.atmosphere</groupId>
     <artifactId>atmosphere-hazelcast</artifactId>
     <packaging>bundle</packaging>
-    <version>2.0.1</version>
+    <version>2.0.1-SNAPSHOT</version>
     <name>atmosphere-hazelcast</name>
     <url>https://github.com/Atmosphere/atmosphere</url>
+    <scm>
+        <connection>scm:git:git@github.com:Atmosphere/atmosphere-extensions.git</connection>
+        <developerConnection>scm:git:git@github.com:Atmosphere/atmosphere-extensions.git</developerConnection>
+        <url>http://github.com/Atmosphere/atmosphere-extensions</url>
+    </scm>
     <build>
         <defaultGoal>install</defaultGoal>
         <plugins>
