--- a/hazelcast/modules/pom.xml
+++ b/hazelcast/modules/pom.xml
@@ -9,7 +9,7 @@
     <groupId>org.atmosphere</groupId>
     <artifactId>atmosphere-hazelcast</artifactId>
     <packaging>bundle</packaging>
-    <version>2.0.1</version>
+    <version>2.0.2-SNAPSHOT</version>
     <name>atmosphere-hazelcast</name>
     <url>https://github.com/Atmosphere/atmosphere</url>
     <scm>
