--- a/pom.xml
+++ b/pom.xml
@@ -471,7 +471,7 @@
         <jersey-version>1.17</jersey-version>
         <atmosphere-version>2.0.3-SNAPSHOT</atmosphere-version>
         <compat-version>2.0.1</compat-version>
-        <javascript-version>2.0.3</javascript-version>
+        <javascript-version>2.0.6-SNAPSHOT</javascript-version>
         <jaxb-version>2.1</jaxb-version>
         <jackson-version>1.3.1</jackson-version>
         <junit-version>3.8.1</junit-version>
