--- a/gwt20/pom.xml
+++ b/gwt20/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.atmosphere</groupId>
         <artifactId>atmosphere-extensions-project</artifactId>
-        <version>2.0.1-SNAPSHOT</version>
+        <version>2.0.0</version>
         <relativePath>../</relativePath>
     </parent>
 
@@ -18,6 +18,8 @@
 
     <properties>
         <gwt-version>2.5.0</gwt-version>
+        <atmosphere-version>2.0.3</atmosphere-version>
+        <javascript-version>2.0.6</javascript-version>
     </properties>
 
     <modules>
@@ -137,5 +139,4 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
 </project>
