--- a/socketio/modules/pom.xml
+++ b/socketio/modules/pom.xml
@@ -9,7 +9,7 @@
 	<groupId>org.atmosphere</groupId>
 	<artifactId>atmosphere-socketio</artifactId>
 	<packaging>bundle</packaging>
-    <version>2.0.1-SNAPSHOT</version>
+    <version>2.0.1</version>
 	<name>atmosphere-socketio</name>
 	<url>https://github.com/Atmosphere/atmosphere</url>
 	<build>
