--- a/sockjs/modules/pom.xml
+++ b/sockjs/modules/pom.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <parent>
-        <groupId>org.atmosphere</groupId>
-        <artifactId>atmosphere-extensions-project</artifactId>
-        <version>2.1.0-SNAPSHOT</version>
-        <relativePath>../../pom.xml</relativePath>
-    </parent>
+	<parent>
+		<groupId>org.atmosphere</groupId>
+		<artifactId>atmosphere-extensions-project</artifactId>
+		<version>2.1.0-SNAPSHOT</version>
+		<relativePath>../../pom.xml</relativePath>
+	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.atmosphere</groupId>
 	<artifactId>atmosphere-sockjs</artifactId>
 	<packaging>bundle</packaging>
-    <version>2.1.0-SNAPSHOT</version>
+	<version>2.1.0-SNAPSHOT</version>
 	<name>atmosphere-sockjs</name>
 	<url>https://github.com/Atmosphere/atmosphere</url>
 	<build>
@@ -25,8 +25,8 @@
 					<instructions>
 						<Import-Package>*</Import-Package>
 						<Export-Package>
-                            org.atmosphere.sockjs.*
-                        </Export-Package>
+							org.atmosphere.sockjs.*
+						</Export-Package>
 					</instructions>
 				</configuration>
 				<executions>
@@ -47,16 +47,21 @@
 			<artifactId>atmosphere-runtime</artifactId>
 			<version>${atmosphere-version}</version>
 		</dependency>
-        <dependency>
-      			<groupId>org.apache.geronimo.specs</groupId>
-      			<artifactId>geronimo-servlet_3.0_spec</artifactId>
-      			<version>1.0</version>
-      			<scope>provided</scope>
-      		</dependency>
+		<dependency>
+			<groupId>org.apache.geronimo.specs</groupId>
+			<artifactId>geronimo-servlet_3.0_spec</artifactId>
+			<version>1.0</version>
+			<scope>provided</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-mapper-lgpl</artifactId>
 			<version>${jackson-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.2.2</version>
 		</dependency>
 	</dependencies>
 </project>
