--- a/hazelcast/modules/pom.xml
+++ b/hazelcast/modules/pom.xml
@@ -43,6 +43,18 @@
     </build>
     <dependencies>
         <dependency>
+        	<groupId>junit</groupId>
+        	<artifactId>junit</artifactId>
+        	<version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+        	<groupId>org.mockito</groupId>
+        	<artifactId>mockito-all</artifactId>
+        	<version>1.8.4</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-jersey</artifactId>
             <version>${atmosphere-version}</version>
