--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <artifactId>atmosphere-extensions-project</artifactId>
     <packaging>pom</packaging>
     <name>atmosphere-extensions-project</name>
-    <version>2.1.0-RC2</version>
+    <version>2.1.0-SNAPSHOT</version>
     <url>http://github.com/Atmosphere/atmosphere-extensions</url>
     <scm>
         <connection>scm:git:git@github.com:Atmosphere/atmosphere-extensions.git</connection>
@@ -471,7 +471,7 @@
     <properties>
         <jetty-version>6.1.22</jetty-version>
         <jersey-version>1.17</jersey-version>
-        <atmosphere-version>2.1.0-RC2</atmosphere-version>
+        <atmosphere-version>2.1.0-SNAPSHOT</atmosphere-version>
         <compat-version>2.1.0</compat-version>
         <javascript-version>2.1.2</javascript-version>
         <jaxb-version>2.1</jaxb-version>
