--- a/gwt20/modules/pom.xml
+++ b/gwt20/modules/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <!-- synced to revision 144 of gwt-comet -->
@@ -25,6 +26,6 @@
         <module>atmosphere-gwt20-server</module>
         <module>atmosphere-gwt20-jackson</module>
         <module>atmosphere-gwt20-managed</module>
-  </modules>
+    </modules>
 
 </project>
