--- a/cdi/modules/pom.xml
+++ b/cdi/modules/pom.xml
@@ -3,13 +3,13 @@
     <parent>
         <groupId>org.atmosphere</groupId>
         <artifactId>atmosphere-extensions-project</artifactId>
-        <version>2.1.1-SNAPSHOT</version>
+        <version>2.1.1</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <groupId>org.atmosphere</groupId>
     <artifactId>atmosphere-cdi</artifactId>
     <packaging>jar</packaging>
-    <version>2.1.1-SNAPSHOT</version>
+    <version>2.1.1</version>
     <name>atmosphere-cdi</name>
     <url>https://github.com/Atmosphere/atmosphere</url>
 
