--- a/pom.xml
+++ b/pom.xml
@@ -472,7 +472,6 @@
         <jetty-version>6.1.22</jetty-version>
         <jersey-version>1.17</jersey-version>
         <compat-version>2.1.0</compat-version>
-        <javascript-version>2.1.4</javascript-version>
         <jaxb-version>2.1</jaxb-version>
         <jackson-version>1.3.1</jackson-version>
         <junit-version>3.8.1</junit-version>
@@ -502,6 +501,7 @@
         <slf4j-version>1.6.1</slf4j-version>
         <logback-version>0.9.30</logback-version>
 
-        <atmosphere-version>[2.1.1, )</atmosphere-version>
+        <atmosphere-version>[2.2.0-SNAPSHOT, )</atmosphere-version>
+        <javascript-version>2.1.4</javascript-version>
     </properties>
 </project>
