--- a/gwt20/modules/atmosphere-gwt20-common/pom.xml
+++ b/gwt20/modules/atmosphere-gwt20-common/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.atmosphere.extensions</groupId>
         <artifactId>atmosphere-gwt20</artifactId>
-        <version>2.1.2-SNAPSHOT</version>
+        <version>2.1.2</version>
         <relativePath>../</relativePath>
     </parent>
 
