--- a/sockjs/modules/pom.xml
+++ b/sockjs/modules/pom.xml
@@ -10,7 +10,7 @@
 	<groupId>org.atmosphere</groupId>
 	<artifactId>atmosphere-sockjs</artifactId>
 	<packaging>bundle</packaging>
-	<version>2.1.3-SNAPSHOT</version>
+	<version>2.1.2</version>
 	<name>atmosphere-sockjs</name>
 	<url>https://github.com/Atmosphere/atmosphere</url>
 	<build>
@@ -45,7 +45,7 @@
 		<dependency>
 			<groupId>org.atmosphere</groupId>
 			<artifactId>atmosphere-runtime</artifactId>
-			<version>${atmosphere-version}</version>
+			<version>2.1.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.geronimo.specs</groupId>
