--- a/pom.xml
+++ b/pom.xml
@@ -501,7 +501,7 @@
         <slf4j-version>1.6.1</slf4j-version>
         <logback-version>0.9.30</logback-version>
 
-        <atmosphere-version>[2.2.0-SNAPSHOT, )</atmosphere-version>
-        <javascript-version>2.2.1-SNAPSHOT</javascript-version>
+        <atmosphere-version>2.2.0-RC2</atmosphere-version>
+        <javascript-version>2.2.1</javascript-version>
     </properties>
 </project>
