--- a/pom.xml
+++ b/pom.xml
@@ -11,13 +11,14 @@
     <artifactId>atmosphere-extensions-project</artifactId>
     <packaging>pom</packaging>
     <name>atmosphere-extensions-project</name>
-    <version>2.2.0-SNAPSHOT</version>
+    <version>2.2.0-RC1</version>
     <url>http://github.com/Atmosphere/atmosphere-extensions</url>
     <scm>
         <connection>scm:git:git@github.com:Atmosphere/atmosphere-extensions.git</connection>
         <developerConnection>scm:git:git@github.com:Atmosphere/atmosphere-extensions.git</developerConnection>
         <url>http://github.com/Atmosphere/atmosphere-extensions</url>
-    </scm>
+      <tag>atmosphere-extensions-project-2.2.0-RC1</tag>
+  </scm>
     <prerequisites>
         <maven>2.2.0</maven>
     </prerequisites>
