--- a/rmi/modules/pom.xml
+++ b/rmi/modules/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.atmosphere</groupId>
         <artifactId>atmosphere-extensions-project</artifactId>
-        <version>2.1.3-SNAPSHOT</version>
+        <version>2.1.3</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
