--- a/redis/modules/pom.xml
+++ b/redis/modules/pom.xml
@@ -11,7 +11,7 @@
     <groupId>org.atmosphere</groupId>
     <artifactId>atmosphere-redis</artifactId>
     <packaging>bundle</packaging>
-    <version>2.2.1</version>
+    <version>2.2.1-SNAPSHOT</version>
     <name>atmosphere-redis</name>
     <url>https://github.com/Atmosphere/atmosphere</url>
     <scm>
