--- a/redis/modules/pom.xml
+++ b/redis/modules/pom.xml
@@ -9,14 +9,14 @@
     <groupId>org.atmosphere</groupId>
     <artifactId>atmosphere-redis</artifactId>
     <packaging>bundle</packaging>
-    <version>2.2.1</version>
+    <version>2.2.2-SNAPSHOT</version>
     <name>atmosphere-redis</name>
     <url>https://github.com/Atmosphere/atmosphere</url>
     <scm>
         <connection>scm:git:git@github.com:Atmosphere/atmosphere-extensions.git</connection>
         <developerConnection>scm:git:git@github.com:Atmosphere/atmosphere-extensions.git</developerConnection>
         <url>http://github.com/Atmosphere/atmosphere-extensions</url>
-    <tag>atmosphere-redis-2.2.1</tag>
+    <tag>HEAD</tag>
   </scm>
     <build>
         <defaultGoal>install</defaultGoal>
