--- a/gwt20/modules/atmosphere-gwt20-common/pom.xml
+++ b/gwt20/modules/atmosphere-gwt20-common/pom.xml
@@ -32,6 +32,7 @@
         <dependency>
             <groupId>com.google.gwt</groupId>
             <artifactId>gwt-user</artifactId>
+            <version>2.7.0-beta1</version>
         </dependency>
     </dependencies>
 </project>
