--- a/gwt20/modules/atmosphere-gwt20-server/pom.xml
+++ b/gwt20/modules/atmosphere-gwt20-server/pom.xml
@@ -33,6 +33,7 @@
         <dependency>
             <groupId>com.google.gwt</groupId>
             <artifactId>gwt-user</artifactId>
+            <version>2.7.0-beta1</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
