--- a/sockjs/modules/pom.xml
+++ b/sockjs/modules/pom.xml
@@ -3,14 +3,14 @@
 	<parent>
 		<groupId>org.atmosphere</groupId>
 		<artifactId>atmosphere-extensions-project</artifactId>
-		<version>2.2.1-SNAPSHOT</version>
+		<version>2.2.1-GWT27-SNAPSHOT</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.atmosphere</groupId>
 	<artifactId>atmosphere-sockjs</artifactId>
 	<packaging>bundle</packaging>
-	<version>2.2.1-SNAPSHOT</version>
+	<version>2.2.1-GWT27-SNAPSHOT</version>
 	<name>atmosphere-sockjs</name>
 	<url>https://github.com/Atmosphere/atmosphere</url>
 	<build>
