--- a/gwt20/pom.xml
+++ b/gwt20/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.atmosphere</groupId>
         <artifactId>atmosphere-extensions-project</artifactId>
-        <version>2.2.1-GWT27-SNAPSHOT</version>
+        <version>2.2.0</version>
         <relativePath>../</relativePath>
     </parent>
 
@@ -17,7 +17,7 @@
     <url>https://github.com/Atmosphere/atmosphere-extensions/gwt20</url>
 
     <properties>
-        <gwt-version>2.7.0-beta1</gwt-version>
+        <gwt-version>2.7.0</gwt-version>
     </properties>
 
     <modules>
