--- a/gwt20/pom.xml
+++ b/gwt20/pom.xml
@@ -12,7 +12,7 @@
     <groupId>org.atmosphere.extensions</groupId>
     <artifactId>atmosphere-gwt20-project</artifactId>
     <name>atmosphere-gwt20-project</name>
-    <version>2.2.1-GWT27</version>
+    <version>2.2.1-GWT27-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <url>https://github.com/Atmosphere/atmosphere-extensions/gwt20</url>
