--- a/gwt20/pom.xml
+++ b/gwt20/pom.xml
@@ -5,7 +5,6 @@
         <groupId>org.atmosphere</groupId>
         <artifactId>atmosphere-extensions-project</artifactId>
         <version>2.2.0</version>
-        <relativePath>../</relativePath>
     </parent>
 
     <groupId>org.atmosphere.extensions</groupId>
@@ -23,6 +22,7 @@
         <connection>scm:git:git@github.com:Atmosphere/atmosphere-extensions.git</connection>
         <developerConnection>scm:git:git@github.com:Atmosphere/atmosphere-extensions.git</developerConnection>
         <url>http://github.com/Atmosphere/atmosphere-extensions</url>
+        <tag>HEAD</tag>
     </scm>
     <modules>
         <module>modules</module>
