--- a/gwt20/pom.xml
+++ b/gwt20/pom.xml
@@ -4,14 +4,14 @@
     <parent>
         <groupId>org.atmosphere</groupId>
         <artifactId>atmosphere-extensions-project</artifactId>
-        <version>2.2.1-GWT27-SNAPSHOT</version>
+        <version>2.2.1-GWT27</version>
         <relativePath>../</relativePath>
     </parent>
 
     <groupId>org.atmosphere.extensions</groupId>
     <artifactId>atmosphere-gwt20-project</artifactId>
     <name>atmosphere-gwt20-project</name>
-    <version>2.2.1-GWT27-SNAPSHOT</version>
+    <version>2.2.1-GWT27</version>
     <packaging>pom</packaging>
 
     <url>https://github.com/Atmosphere/atmosphere-extensions/gwt20</url>
@@ -23,7 +23,7 @@
         <connection>scm:git:git@github.com:Atmosphere/atmosphere-extensions.git</connection>
         <developerConnection>scm:git:git@github.com:Atmosphere/atmosphere-extensions.git</developerConnection>
         <url>http://github.com/Atmosphere/atmosphere-extensions</url>
-        <tag>HEAD</tag>
+        <tag>atmosphere-extensions-project-2.2.1-GWT27</tag>
     </scm>
     <modules>
         <module>modules</module>
